<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp" >

    <EditText
        android:id="@+id/create_input_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_desc"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_input_memo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_memo"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_input_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_location"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_input_start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_start_time"
        android:inputType="text"
        android:focusable="false"
        android:onClick="inputStartTime" />

    <EditText
        android:id="@+id/create_input_end_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_end_time"
        android:inputType="text"
        android:focusable="false"
        android:onClick="inputEndTime" />

    <EditText
        android:id="@+id/create_input_is_repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_is_repeat"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/create_input_max_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/create_input_max_count"
        android:inputType="number" />

    <Button
        android:id="@+id/create_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="creatTask"
        android:text="@string/create_button_confirm" />
    

</LinearLayout>